[gd_scene load_steps=3 format=3 uid="uid://w8if7rx07dgx"]

[ext_resource type="Script" path="res://scripts/ui/StatusControl.gd" id="1_otrrk"]
[ext_resource type="FontFile" uid="uid://hff8wigx8w8f" path="res://fonts/SPACEMAN.TTF" id="2_y7v2u"]

[node name="StatusControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otrrk")

[node name="HourDisplay" type="Panel" parent="."]
layout_mode = 0
offset_left = 255.0
offset_top = 5.0
offset_right = 295.0
offset_bottom = 45.0
scale = Vector2(7.81423, 2.29906)

[node name="HoraMinutos" type="Label" parent="HourDisplay"]
layout_mode = 0
offset_left = 17.5321
offset_top = 3.47968
offset_right = 57.5321
offset_bottom = 26.4797
scale = Vector2(0.539124, 1.067)
theme_override_fonts/font = ExtResource("2_y7v2u")

[node name="DiaMonth" type="Label" parent="HourDisplay"]
layout_mode = 0
offset_left = 1.53566
offset_top = 16.9634
offset_right = 41.5357
offset_bottom = 39.9634
scale = Vector2(0.339232, 0.818917)
theme_override_fonts/font = ExtResource("2_y7v2u")

[node name="TimeDisplay" type="Panel" parent="."]
layout_mode = 0
offset_left = 601.0
offset_top = 4.0
offset_right = 641.0
offset_bottom = 44.0
scale = Vector2(8.07393, 2.13214)

[node name="AcelerateTime" type="Button" parent="TimeDisplay"]
layout_mode = 0
offset_left = 3.09639
offset_top = 14.5394
offset_right = 11.0964
offset_bottom = 22.5394

[node name="PauseTime" type="Button" parent="TimeDisplay"]
layout_mode = 0
offset_left = 16.2251
offset_top = 14.0704
offset_right = 24.2251
offset_bottom = 22.0704

[node name="SlowTime" type="Button" parent="TimeDisplay"]
layout_mode = 0
offset_left = 28.4867
offset_top = 15.4774
offset_right = 36.4867
offset_bottom = 23.4774

[node name="StatusDisplay" type="Panel" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 536.0
offset_right = 301.0
offset_bottom = 576.0
scale = Vector2(16.4025, 2.7163)

[node name="Water" type="Label" parent="StatusDisplay"]
layout_mode = 0
offset_left = 1.00885
offset_top = 25.5506
offset_right = 41.0088
offset_bottom = 48.5506
scale = Vector2(0.0986078, 0.470706)

[node name="O2" type="Label" parent="StatusDisplay"]
layout_mode = 0
offset_left = 6.58718
offset_top = 23.9782
offset_right = 46.5872
offset_bottom = 46.9782
scale = Vector2(0.0986078, 0.470706)

[node name="H2" type="Label" parent="StatusDisplay"]
layout_mode = 0
offset_left = 12.1655
offset_top = 23.192
offset_right = 52.1655
offset_bottom = 46.192
scale = Vector2(0.0986078, 0.470706)

[node name="Energy" type="Label" parent="StatusDisplay"]
layout_mode = 0
offset_left = 17.6845
offset_top = 23.9782
offset_right = 57.6845
offset_bottom = 46.9782
scale = Vector2(0.0986078, 0.470706)

[node name="Metal" type="Label" parent="StatusDisplay"]
layout_mode = 0
offset_left = 24.3904
offset_top = 23.5851
offset_right = 64.3904
offset_bottom = 46.5851
scale = Vector2(0.0986078, 0.470706)

[node name="Food" type="Label" parent="StatusDisplay"]
layout_mode = 0
offset_left = 30.7402
offset_top = 24.7644
offset_right = 70.7402
offset_bottom = 47.7644
scale = Vector2(0.0986078, 0.470706)

[node name="PlayerDisplay" type="Panel" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 465.0
offset_right = 384.0
offset_bottom = 505.0
scale = Vector2(12.0579, 1.68522)

[connection signal="pressed" from="TimeDisplay/AcelerateTime" to="." method="_on_acelerate_time_pressed"]
[connection signal="pressed" from="TimeDisplay/PauseTime" to="." method="_on_pause_time_pressed"]
[connection signal="pressed" from="TimeDisplay/SlowTime" to="." method="_on_slow_time_pressed"]
